express/blocks/fullscreen-marquee/fullscreen-marquee.css
.fullscreen-marquee-container {
  min-height: 460px;
  box-sizing: border-box;
  padding: 0 0 160px 0;
  position: relative;
  height: 100%;
}

.fullscreen-marquee {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.section > .fullscreen-marquee {
  padding: 16px;
  max-width: none;
}

.fullscreen-marquee.has-background {
  padding-bottom: 160px;
}

.fullscreen-marquee .fullscreen-marquee-heading {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.fullscreen-marquee .fullscreen-marquee-heading h1 {
  font-size: var(--heading-font-size-l);
  text-align: left;
}

.fullscreen-marquee .fullscreen-marquee-heading p {
  justify-content: center;
  max-width: 680px;
  margin: 10px 0;
  font-size: var(--body-font-size-m);
  text-align: left;
}

.fullscreen-marquee .fullscreen-marquee-heading .button-container {
  align-items: center;
  display: none;
}

.fullscreen-marquee-heading h1.budoux {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.fullscreen-marquee-heading h1 em {
  font-style: normal;
  background: linear-gradient(320deg, #7C84F3, #FF4DD2, #FF993B, #FF4DD2, #7C84F3, #FF4DD2, #FF993B);
  background-size: 400% 400%;
  -webkit-animation: buttonGradient 45s ease infinite;
  -moz-animation: buttonGradient 45s ease infinite;
  animation: buttonGradient 45s ease infinite;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.fullscreen-marquee .fullscreen-marquee-background {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 50%;
  z-index: -5;
  opacity: 0;
  transition: .5s opacity ease;
  transform: translateX(-50%);
}

.fullscreen-marquee .fullscreen-marquee-background img {
  max-width: none;
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.fullscreen-marquee .fullscreen-marquee-app-frame {
  margin-top: 40px;
  position: relative;
  width: 950px;
  display: none;
}

.fullscreen-marquee .fullscreen-marquee-app-background {
  position: absolute;
  top: -15px;
  left: -15px;
  width: calc(100% + 30px);
  height: calc(100% + 30px);
  z-index: -5;
  background-color: #f3f3f3;
  border-radius: 42px;
  transform-style: preserve-3d;
  transition: transform 1s cubic-bezier(0.22, 0.78, 0.24, 0.98);
}

.fullscreen-marquee .fullscreen-marquee-app {
  transform-style: preserve-3d;
  transition: transform 1s cubic-bezier(0.22, 0.78, 0.24, 0.98);
}

.fullscreen-marquee .fullscreen-marquee-app-image img {
  width: 950px;
  border-radius: 24px;
}

.fullscreen-marquee-app-frame-highlight {
  position: absolute;
  top: -2px;
  left: -2px;
  width: calc(100% + 4px);
  height: calc(100% + 4px);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 10;
  opacity: 0;
  cursor: pointer;
  border-radius: 24px;
  transition: opacity .1s ease-in-out;
}

.fullscreen-marquee-app-frame-highlight:hover {
  background-color: rgba(255, 255, 255, 0.3);
  opacity: 1;
  pointer-events: initial;
}

.fullscreen-marquee .fullscreen-marquee-app-content-container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 92px;
  left: 320px;
  width: 582px;
  height: 440px;
}

.fullscreen-marquee.video .fullscreen-marquee-app-content-container {
  height: 334px;
  border-radius: 20px;
  overflow: hidden;
}

.fullscreen-marquee .fullscreen-marquee-app-content {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
}

.fullscreen-marquee .fullscreen-marquee-app-frame .fullscreen-marquee-app {
  display: block;
}

.fullscreen-marquee .fullscreen-marquee-app-frame .fullscreen-marquee-app img {
  vertical-align: middle;
  max-height: 100%;
}

.fullscreen-marquee .fullscreen-marquee-app-editor {
  position: absolute;
  top: 58px;
  left: 66px;
  width: 196px;
  transition: transform 0.5s ease-out;
  transform: translate3d(0px, 0px, 15px);
}

.fullscreen-marquee.image .fullscreen-marquee-app-editor {
  top: 44px;
  left: 52px;
  width: 222px;
  height: 512px;
}

.fullscreen-marquee.image .fullscreen-marquee-app-editor:after {
  content: '';
  position: absolute;
  height: 24px;
  width: 99%;
  left: 0;
  bottom: 0;
  background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
  z-index: 1;
}

.fullscreen-marquee .fullscreen-marquee-app-editor img {
  border-radius: initial;
}

.fullscreen-marquee .fullscreen-marquee-app-thumbnail-container {
  position: absolute;
  top: 62px;
  left: 67px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border-radius: 5px;
  transform: translate3d(0px, 0px, 15px);
  z-index: 10;
}

.fullscreen-marquee .fullscreen-marquee-app-thumbnail-container video {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.fullscreen-marquee .fullscreen-marquee-app-frames-container {
  display: flex;
  position: absolute;
  width: 274px;
  top: 470px;
  left: 342px;
  height: 41px;
  overflow: hidden;
  border-radius: 5px;
}

.fullscreen-marquee .fullscreen-marquee-app-frames-container video {
  width: 10%;
  height: 100%;
  opacity: 0;
  object-fit: cover;
  transition: .5s opacity ease-in;
}

.block.fullscreen-marquee .button-container.free-plan-container {
  flex-direction: row;
  width: auto;
  justify-content: left;
}

.block.fullscreen-marquee .button-container.free-plan-container a.button {
  margin-right: 24px;
}

.block.fullscreen-marquee .button-container.free-plan-container .free-plan-widget {
  margin: 0;
}

@media (min-width: 900px) {
  .section > .fullscreen-marquee {
    padding-bottom: 40px;
    padding-top: 80px;
  }

  .fullscreen-marquee .fullscreen-marquee-heading {
    align-items: center;
    max-width: 1160px;
  }

  .fullscreen-marquee .fullscreen-marquee-heading h1 {
    font-size: 80px;
    line-height: 90px;
  }

  .fullscreen-marquee .fullscreen-marquee-heading p {
    font-size: var(--body-font-size-l);
    line-height: 30px;
    text-align: center;
  }

  .fullscreen-marquee .fullscreen-marquee-heading .button-container {
    display: flex;
  }

  .fullscreen-marquee .fullscreen-marquee-app-frame {
    display: unset;
  }
}

